--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="arreglo">
             <p>Suit</p>
-            <input type="text" id="agregar">
+            <input type="text" id="suit">
         </div>
         <div class="arreglo">
             <P>Pos</P>
@@ -29,11 +29,11 @@
                 <div class="lat">
 
                     <p>Lat</p>
-                    <input type="password" id="contrasena">
+                    <input type="text" id="latitud">
                 </div>
                 <div class="lat">
                     <p>Lon</p>
-                    <input type="password" id="contrasena">
+                    <input type="text" id="longitud">
                 </div>
             </div>
         </div>
